# getp

./: .gitignore  CMakeLists.txt  README.md  build  run.sh
example/: main.cpp
src/: getp.hpp
